# gmaps-screenshot-scrapy

./: .dockerignore  .example.env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  scrapy.cfg  scrapyd.conf
docs/: config_database.md
gmap_screenshot_engine/: items.py  middlewares.py  pipelines.py  settings.py
gmaps_screenshot_engine/: extensions.py  items.py  middlewares.py  models.py  pipelines.py  services.py  settings.py
gmaps_screenshot_engine/spiders/: gmaps_screenshot_spider.py
