[project]
name = "gmap-screenshot-engine"
version = "0.1.0"
description = "Gmap Screenshot Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "scrapy>=2.14.0",
    "scrapy-redis>=0.9.1",
    "scrapyd>=1.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
